fix styles on mobile

--- a/shared/components/controls/Flip/Flip.scss
+++ b/shared/components/controls/Flip/Flip.scss
@@ -6,3 +6,9 @@
     cursor: pointer;
     margin: 0px 25px;
 }
+
+@media screen and (max-width: 690px) {
+    .trade-panel__change {
+        display: none;
+    }
+} 
