--- a/shared/components/tables/Table/Table.scss
+++ b/shared/components/tables/Table/Table.scss
@@ -63,7 +63,7 @@
         z-index: 2;
         background: $color-f-brightest;
       }
-      
+
       &:nth-child(2) {
         position: absolute;
         z-index: 2;
@@ -123,8 +123,8 @@
     }
   }
 
-  // Exchange 
-  .exchange {
+  // Exchange and Swap history
+  .exchange, .historySwap {
     th {
       &:first-child {
         position: absolute;
@@ -143,7 +143,7 @@
 
     td {
       height: 80px;
-      
+
       &:first-child {
         position: absolute;
         z-index: 2;
@@ -185,7 +185,7 @@
 
       &:nth-child(2) {
         display: block;
-        margin-left: 40px; 
+        margin-left: 40px;
       }
     }
 
@@ -232,7 +232,3 @@
     }
   }
 }
-<<<<<<< HEAD:shared/components/tables/Table/Table.scss
-=======
-
->>>>>>> fix tables on mobile:shared/components/Table/Table.scss
